fix(prod): robust URL detection and permissive CORS to fix 502/CORS errors